3.2/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-service
                port:
                  number: 80
